# cursive-open-editor

./: Cargo.toml  README.md
examples/: dotfile_editor.rs  example.rs
src/: lib.rs  strategy.rs
